feat: Migrate deployment infrastructure by removing Nginx configurations and secure .env file handling, and updating pipelines to use PM2 for process management.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -117,12 +117,6 @@ stages:
         downloadType: 'single'
         artifactName: 'frontend'
         downloadPath: '$(System.ArtifactsDirectory)'
-    
-    - task: DownloadSecureFile@1
-      name: frontendEnvDev
-      displayName: 'Download Frontend .env File'
-      inputs:
-        secureFile: 'frontend-dev.env'
 
     - script: |
          echo "Listing downloaded files:"
@@ -146,39 +140,28 @@ stages:
          # Copy files from temp directory to target directory
          rsync -av --exclude='.next/cache' $TEMP_DIR/ /var/www/astrofinance/frontend-dev/
          
-         # Copy .env file from secure files
-         echo "Copying .env file to frontend directory"
-         cp $(frontendEnvDev.secureFilePath) /var/www/astrofinance/frontend-dev/.env.local
-         chmod 600 /var/www/astrofinance/frontend-dev/.env.local
-         
          # Clean up temporary directory
          rm -rf $TEMP_DIR
          
          echo "Frontend deployed to /var/www/astrofinance/frontend-dev"
       displayName: 'Extract Frontend Build'
-    
+
     - script: |
-        echo "Deploying nginx configuration for frontend on port 6000"
-        
-        # Copy nginx configuration from repository to nginx sites-available
-        sudo cp $(Build.SourcesDirectory)/devops/infrastructure/nginx-frontend-dev.conf /etc/nginx/sites-available/astrofinance-frontend-dev
-        
-        # Create symlink to sites-enabled if it doesn't exist
-        if [ ! -L "/etc/nginx/sites-enabled/astrofinance-frontend-dev" ]; then
-          sudo ln -s /etc/nginx/sites-available/astrofinance-frontend-dev /etc/nginx/sites-enabled/astrofinance-frontend-dev
-          echo "Created symlink for frontend nginx configuration"
+        # Check if we're running as the astroagent user
+        if [ "$(whoami)" = "astroagent" ]; then
+          # Running as astroagent, no need for sudo
+          export PATH=$PATH:/home/astroagent/.nvm/versions/node/v24.4.1/bin
+          export PM2_HOME=/home/astroagent/.pm2
+          cd /var/www/astrofinance/frontend-dev
+          pm2 restart frontend-dev || pm2 start npm --name "frontend-dev" --cwd /var/www/astrofinance/frontend-dev -- start
+          pm2 save
+        else
+          # We need to use a different approach since sudo is not available
+          echo "Current user is not astroagent and sudo is not available. Please configure the pipeline to run as the astroagent user."
+          echo "Alternatively, add the pipeline user to the sudoers file with the appropriate permissions."
+          exit 1
         fi
-        
-        # Test nginx configuration
-        sudo nginx -t
-        
-        # Reload nginx to apply changes
-        sudo systemctl reload nginx
-        
-        echo "Frontend nginx configuration deployed and reloaded successfully"
-      displayName: 'Deploy Frontend Nginx Configuration (Port 6000)'
-
-
+      displayName: 'Restart Frontend with PM2'
 
   - job: DeployBackendDev
     displayName: 'Deploy Backend to Dev'
@@ -189,12 +172,6 @@ stages:
         downloadType: 'single'
         artifactName: 'backend'
         downloadPath: '$(System.ArtifactsDirectory)'
-    
-    - task: DownloadSecureFile@1
-      name: backendEnvDev
-      displayName: 'Download Backend .env File'
-      inputs:
-        secureFile: 'backend-dev.env'
 
     - script: |
         echo "Listing downloaded files:"
@@ -213,36 +190,25 @@ stages:
         # Copy files from temp directory to target directory
         rsync -av $TEMP_DIR/ /var/www/astrofinance/backend-dev/
         
-        # Copy .env file from secure files
-        echo "Copying .env file to backend directory"
-        cp $(backendEnvDev.secureFilePath) /var/www/astrofinance/backend-dev/.env
-        chmod 600 /var/www/astrofinance/backend-dev/.env
-        
         # Clean up temporary directory
         rm -rf $TEMP_DIR
         
         echo "Backend deployed to /var/www/astrofinance/backend-dev"
-      displayName: 'Extract Backend Build and Deploy .env'
+      displayName: 'Extract Backend Build'
 
-
-    
     - script: |
-        echo "Deploying nginx configuration for backend on port 6010"
-        
-        # Copy nginx configuration from repository to nginx sites-available
-        sudo cp $(Build.SourcesDirectory)/devops/infrastructure/nginx-backend-dev.conf /etc/nginx/sites-available/astrofinance-backend-dev
-        
-        # Create symlink to sites-enabled if it doesn't exist
-        if [ ! -L "/etc/nginx/sites-enabled/astrofinance-backend-dev" ]; then
-          sudo ln -s /etc/nginx/sites-available/astrofinance-backend-dev /etc/nginx/sites-enabled/astrofinance-backend-dev
-          echo "Created symlink for nginx configuration"
+        # Check if we're running as the astroagent user
+        if [ "$(whoami)" = "astroagent" ]; then
+          # Running as astroagent, no need for sudo
+          export PATH=$PATH:/home/astroagent/.nvm/versions/node/v24.4.1/bin
+          export PM2_HOME=/home/astroagent/.pm2
+          cd /var/www/astrofinance/backend-dev
+          pm2 restart backend-dev || pm2 start npm --name "backend-dev" --cwd /var/www/astrofinance/backend-dev -- start
+          pm2 save
+        else
+          # We need to use a different approach since sudo is not available
+          echo "Current user is not astroagent and sudo is not available. Please configure the pipeline to run as the astroagent user."
+          echo "Alternatively, add the pipeline user to the sudoers file with the appropriate permissions."
+          exit 1
         fi
-        
-        # Test nginx configuration
-        sudo nginx -t
-        
-        # Reload nginx to apply changes
-        sudo systemctl reload nginx
-        
-        echo "Nginx configuration deployed and reloaded successfully"
-      displayName: 'Deploy Backend Nginx Configuration (Port 6010)'
+      displayName: 'Restart Backend with PM2'
