Update API URL port from 5000 to 5010 and switch environment variables to development.

--- a/fe/.env.production
+++ b/fe/.env.production
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=http://82.180.144.91:5000/api
+NEXT_PUBLIC_API_URL=http://82.180.144.91:5010/api
 NEXT_PUBLIC_APP_NAME=AstroFinance
-NEXT_PUBLIC_APP_ENV=production
-NODE_ENV=production
+NEXT_PUBLIC_APP_ENV=development
+NODE_ENV=development
