chore: Update Azure pipeline to copy `.env.production` to `.env` instead of `.env.local`.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ stages:
         
         # Ensure environment files are properly set up
         echo "Setting up environment files for build"
-        cp .env.production .env.local
+        cp .env.production .env
       displayName: 'Install Frontend Dependencies'
     
     - script: |
