--- a/fe/package.json
+++ b/fe/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
     "react-table": "^7.8.0",
+    "react-to-print": "^3.2.0",
     "react-toastify": "^9.1.3",
     "yup": "^1.3.2"
   },
