--- a/fe/package.json
+++ b/fe/package.json
@@ -14,10 +14,10 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@notcool100/nepali-date-converter": "^1.0.0",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/layout": "^2.3.1",
     "@chakra-ui/react": "^3.22.0",
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^1.7.17",
@@ -25,9 +25,12 @@
     "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@notcool100/nepali-date-converter": "^1.0.0",
+    "@types/uuid": "^11.0.0",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
+    "dexie": "^4.2.1",
     "framer-motion": "^12.23.6",
     "i18next": "^25.7.4",
     "next": "14.0.3",
@@ -44,6 +47,7 @@
     "react-table": "^7.8.0",
     "react-to-print": "^3.2.0",
     "react-toastify": "^9.1.3",
+    "uuid": "^13.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
