--- a/be/package.json
+++ b/be/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "prisma generate --schema=./src/prisma/schema.prisma && tsc",
+    "postinstall": "prisma generate --schema=./src/prisma/schema.prisma",
     "test": "jest",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
